2010-09-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* netrc.el (netrc-parse): Remove encrypt.el mentions.
	* encrypt.el: Removed.

2010-09-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-update-info): Sync non-standard flags from the
	server in symbolic form.

	* gnus-html.el (gnus-max-image-proportion): Increase proportion to
	0.9.

2010-09-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-parse-flags): Parse the data in any order.
	(nnimap-update-info): Fix up code slightly.

	* gnus-int.el (gnus-open-server): Add tracing for performance
	debugging.

	* gnus-group.el (gnus-group-highlight-line): Typo fix: beg, not start.
	(gnus-group-insert-group-line): Pass the real group name so that it
	gets the right data.

	* gnus-start.el (gnus-get-unread-articles): Don't have
	`gnus-get-unread-articles-in-group' update info, since that can be
	really slow and doesn't seem to be needed?

2010-09-22  Dan Christensen  <jdc@uwo.ca>

	* time-date.el (date-to-time): Try using parse-time-string first before
	using the slower timezone-make-date-arpa-standard.

2010-09-22  Julien Danjou  <julien@danjou.info>

	* gnus-group.el (gnus-group-insert-group-line): Call
	gnus-group-highlight-line.
	(gnus-group-update-hook): Remove gnus-group-highlight-line from the
	default hook list.
	(gnus-group-update-eval-form): Add new function.
	(gnus-group-highlight-line): Use gnus-group-update-eval-form.
	(gnus-group-get-icon): Use gnus-group-update-eval-form.

2010-09-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-expire-articles): If nnmail-expiry-wait is
	immediate, then expire all articles.
	(nnimap-update-info): Fix off-by-one errors.
	(nnimap-flags-to-marks): Would return no marks lists for group with no
	flags.  Instead return the other data.

2010-09-22  Julien Danjou  <julien@danjou.info>

	* gnus-group.el (gnus-group-get-icon): Renamed gnus-group-add-icon that
	Only return an icon.